# hsed

./: README.md  pyproject.toml
.github/workflows/: ci.yml
chapters/: chapter_0_book_index.yaml  chapter_1_index.yaml  section_1_01_the_problem.yaml  section_1_02_chmod_analogy.yaml  section_1_03_permission_bits.yaml  section_1_04_octal_notation.yaml  section_1_05_standard_roles.yaml  section_1_06_enforcement.yaml  section_1_07_security_principles.yaml  section_1_08_role_hierarchies.yaml  section_1_09_first_scenarios.yaml  section_1_10_mistakes.yaml
examples/cicd-pipeline/: sign_release.py
hsed/cli/: main.py
hsed/core/: enforcement.py  permissions.py  policy.py
hsed/integrations/: aws_kms.py
tests/: test_hsed.py
