[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsed"
version = "0.1.0"
description = "Hash|Sign|Encrypt|Decrypt — a Unix chmod-inspired permission model for cryptographic operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cryptography", "permissions", "security", "kms", "vault", "rbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []   # core has zero deps

[project.optional-dependencies]
aws   = ["boto3>=1.34"]
vault = ["hvac>=2.1"]
azure = ["azure-mgmt-keyvault>=10.0", "azure-identity>=1.15"]
gcp   = ["google-cloud-kms>=2.21"]
dev   = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
all = ["hsed[aws,vault,azure,gcp]"]

[project.scripts]
hsed = "hsed.cli.main:main"

[project.urls]
Homepage    = "https://github.com/ruwgxo/hsed"
Repository  = "https://github.com/ruwgxo/hsed"
Issues      = "https://github.com/ruwgxo/hsed/issues"

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length     = 100

[tool.ruff.lint]
select  = ["E", "F", "I", "UP"]
ignore  = ["E501"]

[tool.mypy]
python_version      = "3.10"
strict              = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["hsed"]

